# app/common/model/req.go
@@ -5,10 +5,10 @@ import "context"
 const PageSize = 10
 
 type PageReq struct {
-	BeginTime string `p:"beginTime"` //开始时间
-	EndTime   string `p:"endTime"`   //结束时间
-	PageNum   int    `p:"pageNum"`   //当前页码
-	PageSize  int    `p:"pageSize"`  //每页数
-	Ctx       context.Context
-	OrderBy   string //排序方式
+	BeginTime string          `p:"beginTime"` //开始时间
+	EndTime   string          `p:"endTime"`   //结束时间
+	PageNum   int             `p:"pageNum"`   //当前页码
+	PageSize  int             `p:"pageSize"`  //每页数
+	Ctx       context.Context `swaggerignore:"true"`
+	OrderBy   string          //排序方式
 }
